--- a/customs/config/_default/config.toml
+++ b/customs/config/_default/config.toml
@@ -3,27 +3,12 @@
 #
 # This file is formatted using TOML syntax - learn more at https://learnxinyminutes.com/docs/toml/
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
-
 # Title of your site
-<<<<<<< HEAD
-<<<<<<< HEAD
-title = "ECS Knowledge Center"
-
-# The URL of your site.
-# End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://example.com/"
-=======
-=======
->>>>>>> f3564cb4857ce369836db0793180c74731a0885e
 title = "ECS"
 
 # The URL of your site.
-# End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://ecs-support.github.io/"
-<<<<<<< HEAD
->>>>>>> f3564cb4857ce369836db0793180c74731a0885e
-=======
->>>>>>> f3564cb4857ce369836db0793180c74731a0885e
+# End your URL with a `/`   "https://ecs-support.github.io/knowledge-center/customs/".  
+baseurl = "https://ecs-support.github.io/knowledge-center/customs/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
@@ -40,23 +25,10 @@ theme = "academic"
 enableGitInfo = true
 
 # Default language to use (if you setup multilingual support)
-<<<<<<< HEAD
-<<<<<<< HEAD
-#defaultContentLanguage = "en"
-#hasCJKLanguage = false  # Set `true` for Chinese/Japanese/Korean languages.
-#defaultContentLanguageInSubdir = false
-#removePathAccents = true  # Workaround for https://github.com/gohugoio/hugo/issues/5687
-=======
-=======
->>>>>>> f3564cb4857ce369836db0793180c74731a0885e
 defaultContentLanguage = "en"
 hasCJKLanguage = false  # Set `true` for Chinese/Japanese/Korean languages.
 defaultContentLanguageInSubdir = false
 removePathAccents = true  # Workaround for https://github.com/gohugoio/hugo/issues/5687
-<<<<<<< HEAD
->>>>>>> f3564cb4857ce369836db0793180c74731a0885e
-=======
->>>>>>> f3564cb4857ce369836db0793180c74731a0885e
 
 summaryLength = 30  # Listing summary length in words. Also, see `abstract_length` in `params.toml`.
 paginate = 10  # Number of items per page in paginated lists.
