--- a/customs/config/_default/params.toml
+++ b/customs/config/_default/params.toml
@@ -9,15 +9,7 @@
 #   Latest themes (may require updating): https://sourcethemes.com/academic/themes/
 #   Browse built-in themes in `themes/academic/data/themes/`
 #   Browse user installed themes in `data/themes/`
-<<<<<<< HEAD
-<<<<<<< HEAD
-theme = "Minimal"
-=======
 theme = "ecs"
->>>>>>> f3564cb4857ce369836db0793180c74731a0885e
-=======
-theme = "ecs"
->>>>>>> f3564cb4857ce369836db0793180c74731a0885e
 
 # Enable users to switch between day and night mode?
 day_night = true
@@ -26,15 +18,7 @@ day_night = true
 #   Latest font sets (may require updating): https://sourcethemes.com/academic/themes/
 #   Browse built-in font sets in `themes/academic/data/fonts/`
 #   Browse user installed font sets in `data/fonts/`
-<<<<<<< HEAD
-<<<<<<< HEAD
-font = ""
-=======
-font = "ECS"
->>>>>>> f3564cb4857ce369836db0793180c74731a0885e
-=======
-font = "ECS"
->>>>>>> f3564cb4857ce369836db0793180c74731a0885e
+font = "ecs"
 
 # Choose a font size.
 # Sizes: XS (extra small), S (small), M (medium), L (large - DEFAULT), XL (extra large)
@@ -183,7 +167,7 @@ plugins_js  = []
 # An avatar can be uploaded as an image named `avatar` to each user's profile or fetched from Gravatar.com.
 [avatar]
   # Get user avatars from Gravatar.com? (true/false)
-  gravatar = false
+  gravatar = true
 
   # Choose a shape for avatar images. Options: circle, square.
   shape = "circle"
