--- a/customs/data/fonts/ECS.toml
+++ b/customs/data/fonts/ECS.toml
@@ -1,5 +1,5 @@
 # Font style metadata
-name = "ECS"
+name = "ecs"
 
 # Optional Google font URL
 #google_fonts = "Montserrat:400,700|Roboto:400,400italic,700|Roboto+Mono"
