--- a/customs/config/_default/menus.toml
+++ b/customs/config/_default/menus.toml
@@ -14,8 +14,8 @@
   weight = 20
 
 [[main]]
-  name = "Book"
-  url = "book/"
+  name = "Projects"
+  url = "projects/"
   weight = 30
 
 [[main]]
@@ -27,7 +27,7 @@
   name = "พิธีการศุลกากร"
   url = "customs/"
   weight = 50
-
+  
 
 
 [[main]]
