--- a/customs/config/_default/params.toml
+++ b/customs/config/_default/params.toml
@@ -44,7 +44,7 @@ local_business_type = "Software House"
 org_name = "ECS"
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
-description = ""
+description = "Lifelong Learning"
 
 ############################
 ## Site Features
@@ -140,7 +140,7 @@ address_format = "en-us"
 ############################
 
 # Main menu alignment (l = left, c = center, r = right) and logo options.
-main_menu = {align = "r", show_logo = true}
+main_menu = {align = "r", show_logo = false}
 
 # Show estimated reading time for posts? (true/false)
 reading_time = true
