--- a/ECS_Academia/config/_default/config.toml
+++ b/ECS_Academia/config/_default/config.toml
@@ -5,7 +5,7 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Library"
+title = "ECS"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
@@ -13,7 +13,7 @@ baseURL = "https://example.com/KM/customs/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = ""
+copyright = "ECS@Support&copy;{year}"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
@@ -29,7 +29,7 @@ disqusShortname = ""
 theme = "academia-hugo"
 
 # Get last modified date for content from Git?
-enableGitInfo = false
+enableGitInfo = true
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
@@ -65,3 +65,8 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   category = "categories"
   publication_type = "publication_types"
   author = "authors"
+
+[markup]  
+  [markup.tableOfContents]
+    startLevel = 2
+    endLevel = 4
