--- a/ECS_Academia/config/_default/menus.toml
+++ b/ECS_Academia/config/_default/menus.toml
@@ -9,9 +9,14 @@
   weight = 10
 
 [[main]]
+  name = "การนำเข้า-ส่งออก"
+  url = "customs/import-export/"
+  weight = 20
+
+[[main]]
   name = "Posts"
   url = "post/"
-  weight = 20
+  weight = 50
 
 [[main]]
   name = "Projects"
