--- a/ECS_Academia/data/fonts/ecs.toml
+++ b/ECS_Academia/data/fonts/ecs.toml
@@ -8,7 +8,7 @@ google_fonts = "Mitr:400,700|Roboto:400,400italic,700|Sarabun:400,400italic,700|
 # Font families
 heading_font = "Mitr"
 body_font = "Sarabun"
-nav_font = "Roboto"
+nav_font = "Mitr"
 mono_font = "Roboto Mono"
 
 # Font size
