--- a/ECS_Academia/config/_default/menus.toml
+++ b/ECS_Academia/config/_default/menus.toml
@@ -28,8 +28,8 @@
   weight = 35
 
 [[main]]
-  name = "Publications"
-  url = "featured/"
+  name = "ของต้องห้ามหรือต้องมีใบอนุญาต"
+  url = "customs/restricted-goods/"
   weight = 40
 
 
