--- a/ECS_Academia/config/_default/config.toml
+++ b/ECS_Academia/config/_default/config.toml
@@ -9,7 +9,7 @@ title = "ECS"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseURL = "https://example.com/KM/customs/"
+baseURL = "https://ecs-support.github.io/KM/customs/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
