--- a/ECS_Academia/config/_default/menus.toml
+++ b/ECS_Academia/config/_default/menus.toml
@@ -12,28 +12,51 @@
   name = "การนำเข้า-ส่งออก"
   url = "customs/import-export/"
   weight = 20
-[[main]]
-  name = "สิทธิประโยชน์"
-  url = "customs/tax-incentive/"
-  weight = 30
 
 [[main]]
-  name = "Posts"
+  parent = "การนำเข้า-ส่งออก"
+  name = "การนำเข้า"
+  url = "customs/import-export/import/"
+  weight = 21
+
+[[main]]
+  parent = "การนำเข้า-ส่งออก"
+  name = "การส่งออก"
+  url = "customs/import-export/export/"
+  weight = 22
+[[main]]
+  parent = "การนำเข้า-ส่งออก"
+  name = "สินค้าถ่ายลำ/ผ่านแดน"
+  url = "customs/import-export/transit/"
+  weight = 23
+[[main]]
+  parent = "การนำเข้า-ส่งออก"
+  name = "สิทธิประโยชน์ทางภาษี"
+  url = "customs/tax-incentive/"
+  weight = 24
+[[main]]
+  parent = "การนำเข้า-ส่งออก"
+  name = "สิทธิพิเศษทางการค้า"
+  url = "customs/free-trade/"
+  weight = 25
+
+
+[[main]]
+  name = "เรื่องน่ารู้"
+  url = "customs/"
+  weight = 30
+[[main]]
+  parent = "เรื่องน่ารู้"
+  name = "ของต้องห้ามหรือต้องมีใบอนุญาต"
+  url = "customs/restricted-goods/"
+  weight = 31
+
+[[main]]
+  name = "ข่าวสารและบทความ"
   url = "post/"
   weight = 50
 
-[[main]]
-  name = "สิทธิพิเศษทางการค้า"
-  url = "customs/free-trade/"
-  weight = 35
-
-[[main]]
-  name = "ของต้องห้ามหรือต้องมีใบอนุญาต"
-  url = "customs/restricted-goods/"
-  weight = 40
-
-
-  
+ 
 
 
 [[main]]
