--- a/ECS_Academia/config/_default/menus.toml
+++ b/ECS_Academia/config/_default/menus.toml
@@ -50,7 +50,7 @@
 
 [[main]]
   parent = "เรื่องน่ารู้"
-  name = "ของต้องห้ามหรือต้องมีใบอนุญาต"
+  name = "ของควบคุมการนำเข้า-ส่งออก"
   url = "customs/restricted-goods/"
   weight = 33
 
