--- a/ECS_Academia/config/_default/menus.toml
+++ b/ECS_Academia/config/_default/menus.toml
@@ -56,13 +56,16 @@
   url = "post/"
   weight = 50
 
- 
+ [[main]]
+  name = "Reference Data"
+  url = "https://ecs-support.github.io/KM/reference/"
+  weight = 60
 
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
