--- a/ECS_Academia/config/_default/menus.toml
+++ b/ECS_Academia/config/_default/menus.toml
@@ -76,13 +76,16 @@
   url = "customs/company/"
   weight = 45
 
-
+[[main]]
+  name = "กรมศุลกากร"
+  url = "customs/customs-dept/"
+  weight = 60
   
 
 [[main]]
   name = "ข่าวสารและบทความ"
   url = "post/"
-  weight = 50
+  weight = 70
 
 
 
@@ -90,7 +93,7 @@
 [[main]]
   name = "FAQ"
   url = "customs/faq/"
-  weight = 70
+  weight = 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
